gcc/testsuite/gm2/errors/fail/binarygenericconst.mod
MODULE binarygenericconst ;

FROM SYSTEM IMPORT WORD ;

VAR
   a, b: WORD ;
BEGIN
   b := 1 ;
   a := 1 + b
END binarygenericconst.
